--- a/home.html
+++ b/home.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <div class="wrap">
+    <div class="back-btn"></div>
         <h2>
-           <img src="img/title2.png">
+           <img src="img/11.png">
         </h2>
-        <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具</p>
+        <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主</p>
     <div class="footer">
         <div class="pull-left">
-        <img src="img/lf2.png">
+        <img src="img/left.png">
             <p> 22222</p>
         </div>
 
@@ -22,4 +23,6 @@
             <p> BJPTTeng</p>
         </div>
     </div>
+</div>
+</body>
 </html>
