--- a/home.html
+++ b/home.html
@@ -11,18 +11,16 @@
         <h2>
            <img src="img/11.png">
         </h2>
-        <p> 葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主</p>
+        <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以线下聚会桌游道具为主</p>
     <div class="footer">
         <div class="pull-left">
-        <img src="img/left.png">
+        <img src="img/left2.png">
             <p> 22222</p>
         </div>
 
         <div class="pull-right">
-        <img src="img/lf3.png" >
+        <img src="img/right.png" >
             <p> BJPTTeng</p>
         </div>
     </div>
-</div>
-</body>
 </html>
