--- a/no.5/nurse.html
+++ b/no.5/nurse.html
@@ -54,7 +54,8 @@
             可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人
             可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人
             可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人
-            可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老可以洗衣做饭照顾老人
+            可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人
+            可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人
             可以洗衣做饭照顾老人可以洗衣做饭照顾老人可以洗衣做饭照顾老人
         </p>
     </div>
