--- a/no.6/Demo.html
+++ b/no.6/Demo.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1">
     <title>Title</title>
-    <script src="http://how2j.cn/study/js/jquery/2.0.0/jquery.min.js";></script>
+    <script src="jquery-3.2.1.min.js";></script>
     <link rel="stylesheet" href="bootstrap.min.css" type="text/css">
-    <script src="http://how2j.cn/study/js/bootstrap/3.3.6/bootstrap.min.js";></script>
+    <script  type="text/javascript" src="bootstrap.min.js";></script>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
@@ -236,9 +236,5 @@
           <p>我的</p>
       </div>
   </footer>
-
-
-
-
 </body>
 </html>
