--- a/NO.8/Demo.html
+++ b/NO.8/Demo.html
@@ -52,16 +52,16 @@
                 <div class="collapse navbar-collapse" id="example-navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li href="#">
-                            <a href="#">首页</a>
+                            <a href="Demo.html">首页</a>
                         </li>
                         <li>
-                            <a href="#">职业</a>
+                            <a href="Demo2.html">职业</a>
                         </li>
                         <li>
-                            <a href="#">推荐</a>
+                            <a href="Demo2.html">推荐</a>
                         </li>
                         <li>
-                            <a href="#">关于</a>
+                            <a href="Demo3.html">关于</a>
                         </li>
                     </ul>
                 </div>
