--- a/JavaScript/NO.2/Home.html
+++ b/JavaScript/NO.2/Home.html
@@ -6,33 +6,33 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style3.css">
+    <link rel="stylesheet" href="CSS/Home-style.css">
 </head>
 <body>
       <header>
-          <a href="./Demo1.html">
-          <img class="himg" src="img/demo3/leftup.png">
+          <a href="#">
+          <img class="himg" src="IMG/leftup.png">
           </a>
       </header>
        <div class="content">
-           <img class="cimg" src="img/demo3/rightup.png">
+           <img class="cimg" src="IMG/rightup.png">
            <p>上次游戏：捉鬼猜词版</p>
        </div>
         <footer>
              <p class="special">捉鬼游戏</p>
             <div class="fcontent">
                 <div class="bot1">
-                <a href="./Demo1.html" class="fcontent1">
+                <a href="#" class="fcontent1">
                     <p style="color: #ffffff;">简化版</p>
                 </a>
                 </div>
                 <p style="color: #787878">有8848个用户正在玩此游戏</p>
             </div>
 
-            <img class="rightcenter small" src="img/demo3/leftcenter.png">
+            <img class="rightcenter small" src="IMG/leftcenter.png">
             <div class="fcontent">
                 <div class="bot1">
-                    <a href="./Demo1.html" class="fcontent1">
+                    <a href="#" class="fcontent1">
                         <p style="color: #ffffff;">猜词版</p>
                     </a>
                 </div>
@@ -41,7 +41,7 @@
 
             <div class="fcontent">
                 <div class="bot1">
-                    <a href="./Demo1.html" class="fcontent1">
+                    <a href="#" class="fcontent1">
                         <p style="color: #ffffff;">傻瓜版</p>
                     </a>
                 </div>
@@ -56,7 +56,7 @@
             </div>
         </footer>
         <div class="foooter">
-            <a href="#">玩家配比</a>
+            <a href="assgin.html">玩家配比</a>
         </div>
 </body>
 </html>
